media/stylesheets/twfa.css
/* Eric Meyer's reset - http://meyerweb.com/eric/tools/css/reset/ */
html, body{
  height: 100%;
}
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
}
body {
	line-height: 1;
	background-color: #fff;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

/* remember to define focus styles! */
:focus {
	outline: 0;
}

/* remember to highlight inserts somehow! */
ins {
	text-decoration: none;
}
del {
	text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* Reset END */
/*
 * Swatch
 * #973e33 - dark background - header, footer
 * #821e20 - accent to darker background - used for borders for above
 * #ce3d2b - lighter background colour - aside
 * #811000 - accent to lighter background - search
 * #b16b63 - nav background
 * #d3bb7e - outside background
 */
body{
  font-family: "Helvetica Neue", sans-serif;
  font-weight: 200;
  background: url('../images/bg-stripe.jpg');
  letter-spacing: 1px;
  line-height: 1.1em;
  
}
strong{
  font-weight: 500;
}
input {
  border: 0;
  border-bottom: 1px solid gray;
}
input[type=submit] {
  border: 1px solid #fff;
  color: #fff;
}
header, nav, section#main, section#content, section#headline{
  display: block;
  margin-left: auto;
  margin-right: auto;
}
nav{
  height:2.25em;
  min-height: 1em;
  background: #000000;
}
nav ul li{
  height: 26px;
  padding-top: 10px;
  display: block;
  float: left;
  margin-right: 1em;
  margin-left: 1em;
}
nav ul a{
  text-decoration: none;
  font-family: "Helvetica Neue";
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #fff;
  padding-left: 5px;
  padding-right: 5px;
}
nav ul a:hover{
  background-color: #444444;
  padding: 10px 0px 8px 0px;
}
nav div{
  float: right;
  margin-right: 5px;
  vertical-align: middle;
}
header{
  background: #821e20;
}
header img{
  padding: 10px;
  width: 300px;
}
section#headline div{
  padding: 0;
  margin: 0;
  background: url('/images/headline_top.png') top no-repeat;
}
section#headline{
  height: 5em;
  background: url('/images/headline_bottom.png') bottom no-repeat;
  color: #fff;
}
section#headline p{
  padding-left: 30px;
}
header, nav, section#main, section#content{
  width: 1000px;
}
section#headline{
  width: 1050px;
}
section#headline h1 {
    font-size: 25px;
    font-family: "Helvetica Neue", sans-serif;
    margin-left: 40px;
    font-weight: 300;
}
section#headline h1, section#headline p{
  padding-left: 40px;
}
section#content{
  min-height: 700px;
  background: #fff;
  padding-bottom: 10px;
  padding-top: 20px;
  border-left: solid 1px #666;
  border-right: solid 1px #666;
  border-bottom: solid 1px #666;
}
section#content div.full{
  width: 95%;
  margin-left: auto;
  margin-right: auto;
}
section#content div.half{
  width: 45%;
  float: left;
  margin-left: 4%;
}
section#content div.half h1 {
    font-size: 4.2em;
    font-weight: 100;
    line-height: 70%;
}
section#content div.full *, section#content div.half *{
  padding-left: 2px;
  padding-right: 2px;
}

section#content div.full{
  width: 95%;
  margin-left: auto;
  margin-right: auto;
}
section#content div#intro {
  width: 75%;
  margin: 0px auto 15px auto;
  padding-top: 40px;
}
section#content div#intro p {
    font-size: 1.2em;
    font-weight: 400;
    line-height: 120%;
}

section#content div.intro-box {
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    background: #666;
    padding: 15px;
    color: #fff;
    line-height: 130%;
    font-size: 1.2em;
}

#homepage-search {
    margin-top: 60px;
}

section#content div.center {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
    text-align:center;
}

section#content div.center h2 a {
    text-decoration: none;
    color: #D3BB7E;
}

section#content input {
  font-size: 1.4em;
}

section#content h1, h2, h3{
 padding-top: 15px;
 margin-bottom: 10px;
 font-family: "Helvetica Neue", sans-serif;
 font-weight: 500;
}

section#content h1 {
    font-size: 25px;
}

section#content h2 {
    font-size: 20px;
    line-height: 100%;
    color: #ce3d2b;
    border-top: solid 3px #C0C0C0;
    padding: 10px !important;
}

section#content h3 {
    color: #a0a0a0;
}

/*
 * Media queries to adjust sizes for screens
 */
@media only screen and (min-width: 1200px) {
  header, nav, section#main, section#content{
    width: 1000px;
  }
  section#headline{
    width: 1050px;
  }
}
div.clear{
  height: 0px;
}

/*
 * Specific site sections
 */

/* Registration Form */
form#registration_form 
form#registration_form span.error{
  font-size: 0.4em;
  color: red;
}
div.non_field_errors{
  color: red;
}

